--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,25 +19,21 @@
 # REQUIRED: nuvola.pms.path is the location of the http service exposed by Plex Media Server
 # the default value should be 'ok', assuming you're running the tvshowtime-plex on the same machine
 # where the PMS is installed
-nuvola.pms.path = http://localhost:32400
+nuvola.pms.path = http://192.168.0.2:32400
 
-# OPTIONAL when there is only one single Plex user
-# REQUIRED when there is multiple Plex users. When you have multiple users in Plex, PMS secure all
-# web services. In this case 'X-Plex-Token' of the user you want to use is important to communicate with PMS
-# To find the 'X-Plex-Token' follow this article : http://bit.ly/1PqlB1v
-# You need to provide both a token and the username.
-nuvola.pms.token =
-nuvola.pms.username =
+# REQUIRED: To find the 'X-Plex-Token' follow this article : http://bit.ly/1PqlB1v
+nuvola.pms.token = Qx5eNJak22avXkFFnW8Z
 
-# REQUIRED: Where do you wish to write the token used for authorizing access to
-# you TVShow Time account, the default value should be 'ok'
-nuvola.tvshowtime.tokenFile = session_token
+# REQUIRED: Where do you wish to write the tokens used for authorizing access to you TvTime account
+nuvola.tokenStore = tokenStoreFile
 
 # REQUIRED: If nuvola.pms.markall is set to true the script will mark all watched episodes. Useful once, then return to false.
 nuvola.pms.markall = false
 
 # REQUIRED: Where do you wish to write the tvshowtime-plex log file.
-logging.path = /tmp/tvshowtimeplex
-logging.pattern.console=%d{HH:mm} %-5level - %msg%n
+#logging.path = /tmp/tvshowtimeplex
+#logging.pattern.console=%d{HH:mm} %-5level - %msg%n
 logging.level.root = ERROR
+logging.level.org.springframework = INFO
 logging.level.org.nuvola.tvshowtime = INFO
+server.port=9090
